@@ -8888,91 +8888,6 @@ expr_stmt|;
 block|}
 annotation|@
 name|Override
-DECL|method|longReadLockInterruptibly ()
-specifier|public
-name|void
-name|longReadLockInterruptibly
-parameter_list|()
-throws|throws
-name|InterruptedException
-block|{
-name|this
-operator|.
-name|fsLock
-operator|.
-name|longReadLock
-argument_list|()
-operator|.
-name|lockInterruptibly
-argument_list|()
-expr_stmt|;
-try|try
-block|{
-name|this
-operator|.
-name|fsLock
-operator|.
-name|readLock
-argument_list|()
-operator|.
-name|lockInterruptibly
-argument_list|()
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|InterruptedException
-name|ie
-parameter_list|)
-block|{
-comment|// In the event we're interrupted while getting the normal FSNS read lock,
-comment|// release the long read lock.
-name|this
-operator|.
-name|fsLock
-operator|.
-name|longReadLock
-argument_list|()
-operator|.
-name|unlock
-argument_list|()
-expr_stmt|;
-throw|throw
-name|ie
-throw|;
-block|}
-block|}
-annotation|@
-name|Override
-DECL|method|longReadUnlock ()
-specifier|public
-name|void
-name|longReadUnlock
-parameter_list|()
-block|{
-name|this
-operator|.
-name|fsLock
-operator|.
-name|readLock
-argument_list|()
-operator|.
-name|unlock
-argument_list|()
-expr_stmt|;
-name|this
-operator|.
-name|fsLock
-operator|.
-name|longReadLock
-argument_list|()
-operator|.
-name|unlock
-argument_list|()
-expr_stmt|;
-block|}
-annotation|@
-name|Override
 DECL|method|readUnlock ()
 specifier|public
 name|void
@@ -9002,16 +8917,6 @@ name|this
 operator|.
 name|fsLock
 operator|.
-name|longReadLock
-argument_list|()
-operator|.
-name|lock
-argument_list|()
-expr_stmt|;
-name|this
-operator|.
-name|fsLock
-operator|.
 name|writeLock
 argument_list|()
 operator|.
@@ -9033,47 +8938,12 @@ name|this
 operator|.
 name|fsLock
 operator|.
-name|longReadLock
-argument_list|()
-operator|.
-name|lockInterruptibly
-argument_list|()
-expr_stmt|;
-try|try
-block|{
-name|this
-operator|.
-name|fsLock
-operator|.
 name|writeLock
 argument_list|()
 operator|.
 name|lockInterruptibly
 argument_list|()
 expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|InterruptedException
-name|ie
-parameter_list|)
-block|{
-comment|// In the event we're interrupted while getting the normal FSNS write
-comment|// lock, release the long read lock.
-name|this
-operator|.
-name|fsLock
-operator|.
-name|longReadLock
-argument_list|()
-operator|.
-name|unlock
-argument_list|()
-expr_stmt|;
-throw|throw
-name|ie
-throw|;
-block|}
 block|}
 annotation|@
 name|Override
@@ -9088,16 +8958,6 @@ operator|.
 name|fsLock
 operator|.
 name|writeLock
-argument_list|()
-operator|.
-name|unlock
-argument_list|()
-expr_stmt|;
-name|this
-operator|.
-name|fsLock
-operator|.
-name|longReadLock
 argument_list|()
 operator|.
 name|unlock
@@ -33065,20 +32925,6 @@ return|return
 name|fsLock
 operator|.
 name|coarseLock
-return|;
-block|}
-annotation|@
-name|VisibleForTesting
-DECL|method|getLongReadLockForTests ()
-specifier|public
-name|ReentrantLock
-name|getLongReadLockForTests
-parameter_list|()
-block|{
-return|return
-name|fsLock
-operator|.
-name|longReadLock
 return|;
 block|}
 annotation|@
